Fixed styling and overflow in portfolio items

--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,6 @@ footer {
 .flex-column {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
 }
 .flex-center {
     align-items: center;
@@ -128,13 +127,13 @@ footer {
     margin: 0;
 }
 .text-medium {
-    font-family: 'Lora', serif;
+    font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     font-size: 20px;
     margin: 0;
 }
 .text-small {
-    font-family: 'Lora', serif;
+    font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     font-size: 14px;
     margin: 0;
@@ -280,7 +279,7 @@ img.home-about {
 img.home-about:hover {
     filter:grayscale(0%);
 }
-.home-portfolio-item {
+/* .home-portfolio-item {
     width:270px;
     background-color:rgba(0, 15, 20, 1);
     border-radius: 10px 10px 10px 10px;
@@ -301,7 +300,7 @@ article.home-portfolio-item a {
 }
 article.home-portfolio-item a:hover {
     color:rgb(0, 191, 255);
-}
+} */
 .home-contact-icon {
     width:60px;
     height:60px;
@@ -425,7 +424,7 @@ img.about-img {
     border-radius:25px;
     background:rgba(0, 0, 0, 0.3);
     transition:all 0.5s ease;
-    margin-right:2vw;
+    margin-right:3vw;
 }
 .portfolio-filter:hover {
     background:rgba(0, 0, 0, 0.7);
@@ -448,7 +447,6 @@ img.about-img {
     border-radius:10px;
 }
 .portfolio-content a {
-   
     color:whitesmoke;
     text-decoration:none;
     transition: all 0.5s ease;
@@ -460,10 +458,9 @@ img.about-img {
     width: 90%;
     border-radius: 10px 10px 0px 0px;
     padding: 5%;
-    margin-bottom:0.5vw;
 }
 .portfolio-text {
-    padding: 2%;
+    padding: 0 3% 3% 3%;
 }
 #portfolio-info-main-image {
     width: 100%;
@@ -576,7 +573,7 @@ img.about-img {
         width:50%;
         margin-top: 5vw;
     }
-    .home-portfolio-item {
+    /* .home-portfolio-item {
         width:60%;
         background-color:rgba(0, 15, 20, 1);
         border-radius: 10px 10px 10px 10px;
@@ -588,7 +585,7 @@ img.about-img {
     }
     .home-portfolio-info {
         padding:1vw 2vw;
-    }
+    } */
     .home-contact-icon {
         width:10vw;
         height:10vw;
@@ -640,7 +637,6 @@ img.about-img {
     }
     .portfolio-content {
         width: 45%;
-        height: 50vw;
     }
     .cursor {
         display:none;
